Added: Convert leading TABS to Spaces and reverse.
Signed-off-by: Daniel <jvdanilo@gmail.com>

--- a/NotepadSharp.vcxproj
+++ b/NotepadSharp.vcxproj
@@ -200,6 +200,9 @@ exit
   <ItemGroup>
     <ResourceCompile Include="version.rc" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
